--- a/modulo_1_leccion_01_ejercicio_1/index.html
+++ b/modulo_1_leccion_01_ejercicio_1/index.html
@@ -5,6 +5,6 @@
     <title>Mi página web</title>
   </head>
   <body>
-    <h1>Hola mundo, esta es mi primera página web </h1>
+    <h1>Hola mundo, esta es mi primera página web. </h1>
   </body>
 </html>
