--- a/modulo-1-leccion-1-ejercicio-1.1/index.html
+++ b/modulo-1-leccion-1-ejercicio-1.1/index.html
@@ -6,5 +6,10 @@
   </head>
   <body>
     <h1>Hola mundo, esta es mi primera página web.</h1>
+    <ul>
+      <li>Lista</li>
+      <li>Lista 2</li>
+      <li>Lista 3</li>
+    </ul>
   </body>
 </html>
