update to module 3

--- a/apuntes/Apuntes atributos HTML y CSS/index.html
+++ b/apuntes/Apuntes atributos HTML y CSS/index.html
@@ -42,7 +42,7 @@
           px, como 1 o 2
         </p>
         <p>text-align: center: centrar texto, solo vale para texto</p>
-        <p>box-sizing: border-box; PREGUNTAR A SATORY</p>
+        <p>box-sizing: border-box</p>
         <p>
           display: puede ser inline, block, inline-block o el maravilloso flex
         </p>
@@ -53,7 +53,7 @@
           flex-direction: column o row: cambiar sentido de los componentes
         </p>
         <p>
-          explicación flex de Satory: <br />
+          explicación flex: <br />
           1º - Elegir el eje principal <br />
           flex-direction: row; <br />
           2º - Justify-content - Alinea y/o distribuye los elemenetos en el eje
@@ -96,9 +96,9 @@
           border-radius: 22px;
         </p>
         <p>
-          Movida que me explicó Satory: <br />
+          Movida interesante: <br />
           .clase1 > .clase2 --> Significa que afecta solo a las .clase2 que sean
-          hijes de .clase1 <br />
+          hijas de .clase1 <br />
           .box > img { width: 150px; } <br />
           .box > h3 { letter-spacing: 1.5px;
         </p>
@@ -110,6 +110,7 @@
         < !-- texto -->
       </p>
       <ul>
+        <p>Lista</p>
         <li>1</li>
         <li>2</li>
         <li>3</li>
